--- a/3.html
+++ b/3.html
@@ -4,23 +4,28 @@
 <head>
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body></body>
-<h1><a href="index.html">WEB</a></h1>
-<ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>JavaScript 란 무엇인가?</h2>
-<p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript" target="_blank" title="JavaScript specification">JS</a> is useful to start with an overview of the language's history. JavaScript was created in 1995 by
-    Brendan Eich while he was an engineer at Netscape.</p>
-<p>JavaScript was first released with Netscape 2 early in 1996. It was originally going to be called LiveScript,</p>
-<p> but it was renamed in an ill-fated marketing decision that attempted to capitalize on the popularity of Sun Microsystem's Java language — despite the two having very little in common.</p>
-<p> This has been a source of confusion ever since.
-    <p>
-        <img src="js.png" width="1000px">
-        </body>
+<h1><a href="index.html" class="main">WEB</a></h1>
+<div id="grid">
+    <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+    </ol>
+    <div id="article">
+        <h2>JavaScript 란 무엇인가?</h2>
+        <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript" target="_blank" title="JavaScript specification">JS</a> is useful to start with an overview of the language's history. JavaScript was created in
+            1995 by Brendan Eich while he was an engineer at Netscape.</p>
+        <p>JavaScript was first released with Netscape 2 early in 1996. It was originally going to be called LiveScript,</p>
+        <p> but it was renamed in an ill-fated marketing decision that attempted to capitalize on the popularity of Sun Microsystem's Java language — despite the two having very little in common.</p>
+        <p> This has been a source of confusion ever since.
+            <p>
+                <img src="js.png" width="1000px">
+    </div>
+</div>
+</body>
 
 </html>
